<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>II_NVM</name>
  <version>0.0.0</version>

  <description>
    This work is created based on some optimization on ALOAM by HKUST and LOAM by CMU
  </description>

  <maintainer email="960732491@qq.com">chengwei</maintainer>

  <license>BSD</license>
  <url>https:*</url>
  <author email="960732491@qq.com">chengwei</author>
  
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>  
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>visualization_msgs</depend>
  <depend>livox_ros_driver2</depend>
  <depend>pcl_ros</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
